fix(security): make admin authorization deterministic — JAX-RS SecurityContext + authoritative role read (closes #1732, closes #1746)
An authenticated admin non-deterministically got 403 instead of 200 on
/rest/saiku/admin/* (and every role-scoped read flaked): per-JVM-stable but
flipping across restarts (Linux CI 200 on some runs, 403 on others; Windows
stuck at 403). Root cause was TWO independent bugs; both fixed at the source.
The Spring URL gate is left verbatim, so the non-admin/anonymous boundary is
unchanged.

Bug 1 — JAX-RS @RolesAllowed servlet-wrapper propagation. Jersey is a plain
ServletContainer servlet (/rest/*), so its default SecurityContext.isUserInRole
delegates to HttpServletRequest.isUserInRole, provided by Spring's
SecurityContextHolderAwareRequestWrapper — whose propagation into Jersey's
SecurityContext is non-deterministic across JVM launches. New provider
SaikuJaxrsSecurityContextFilter (@Priority(AUTHENTICATION), registered before
RolesAllowedDynamicFeature) installs a JAX-RS SecurityContext sourced from
SecurityContextHolder, matching the Spring authorities directly.

Bug 2 — AdminResource's per-method userService.isAdmin() read roles from the
lazily-seeded session map, which under stateless Basic auth was frequently
empty -> isAdmin() false -> 403 (23 method gates). UserService
.getCurrentUserRolesList() now reads AUTHORITATIVELY from
SecurityContextHolder.getAuthentication().getAuthorities(), the deterministic
per-request source. Safe because the session "roles" is ALWAYS written from
those same authorities (SessionService.createSession + runAs are the only
writers) — superset-or-equal, always fresher, never grants an unheld role.
runAs() impersonation preserved (sets both holder + session to the same list).
Fail-closed (saiku#1516) kept explicit: null/unauthenticated/anonymous -> empty.

No boundary loosening: a ROLE_USER-only principal still fails both the URL gate
and isUserInRole("ROLE_ADMIN"); non-admin -> 403, anonymous -> 401 unch